--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -37,6 +37,16 @@ a#accordionTitleLink {
   line-height: 19px;
 }
 
+// SIMPLE CONTENT
+
+.simple-content {
+  padding-bottom: @vertical-grid;
+}
+
+.simple-content:last-child {
+  padding-bottom: 0;
+}
+
 // TEASER
 
 .teaser {
