Drawer menu: * removed scrollable IScroll directive from drawer menu in static pages * initialize and refresh IScroll on ng-include $includeContentLoaded event in scrollable directive * removed active item highlight from drawer CSS
Support email and terms of service and privacy policy links to about page.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -538,6 +538,10 @@ a.content:active {
   font-size: @slide-indicator-width;
 }
 
+#about-help {
+  line-height: @vertical-grid-half;
+}
+
 // GRADIENTS
 
 .edges-fade-to-white {
