Updated invitation email

--- a/backend/src/main/resources/templates/acceptInviteRequest.html
+++ b/backend/src/main/resources/templates/acceptInviteRequest.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>the wait is over</title>
+    <title>invitation to join the extended mind</title>
   </head>
   <body style="font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;text-align: center;margin-left: auto;margin-right: auto;max-width: 550px;padding-left: 10px;padding-right: 10px;">
     <div id="em-header" style="padding-top: 50px;padding-bottom: 50px;border-bottom: solid 1px #E4E4E4;">
@@ -10,11 +10,15 @@
     </div>
     <div id="em-content">
       <div id="em-heading" style="padding-top: 30px;max-width: 320px;margin-left: auto;margin-right: auto;">
-        <h1 style="font-size: 26px;font-weight: 200;color: black;">you have received an invite to join extended mind</h1>
+        <h1 style="font-size: 26px;font-weight: 200;color: black;">welcome to your extended mind</h1>
       </div>
-      <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
-        <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">upload your thoughts and tasks into your extended mind so that
-            you can focus your biological mind fully on what you are doing</h2>
+      <div id="em-description" style="padding-top: 15px;max-width: 355px;margin-left: auto;margin-right: auto;line-height: 28px;">
+        <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
+        	<p>this is the roll out of a very limited private beta batch.</p>
+            <p>the initial roll out is for iphone users only. the android app is only weeks away.</p>
+            <p>don’t hesitate to contact us at <a href="mailto:info@ext.md">info@ext.md</a> for any questions or comments.</p>
+            <p><br/><br/>welcome to your extended mind.</p>            
+            </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
         <a href="acceptInviteLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;">click here to start using the service</span></a>
