--- a/backend/src/main/resources/templates/resetPassword.html
+++ b/backend/src/main/resources/templates/resetPassword.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>the wait is over</title>
+    <title>reset password</title>
   </head>
   <body style="font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;text-align: center;margin-left: auto;margin-right: auto;max-width: 550px;padding-left: 10px;padding-right: 10px;">
     <div id="em-header" style="padding-top: 50px;padding-bottom: 50px;border-bottom: solid 1px #E4E4E4;">
@@ -10,13 +10,13 @@
     </div>
     <div id="em-content">
       <div id="em-heading" style="padding-top: 30px;max-width: 320px;margin-left: auto;margin-right: auto;">
-        <h1 style="font-size: 26px;font-weight: 200;color: black;">find below link to reset your password to the extended mind service</h1>
+        <h1 style="font-size: 26px;font-weight: 200;color: black;">find below a link to reset your password to the extended mind service</h1>
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">if you did not ask to reset your password, ignore this message</h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="resetPasswordLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;">click here reset your password</span></a>
+        <a href="resetPasswordLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;">click here to reset your password</span></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
