--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -47,6 +47,12 @@ a#accordionTitleLink {
   padding-bottom: 0;
 }
 
+#email-verification-status {
+  font-size: @small-font-size;
+  display: block;
+  line-height: @vertical-grid-half;
+}
+
 // TEASER
 
 .teaser {
