Terms of service and privacy policy modals on about page.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -511,6 +511,23 @@ a.content:active {
   }
 }
 
+#policy-modal {
+  .modal-dialog {
+    width: 90%;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    .modal-content {
+      .modal-body {
+        overflow-y: auto;
+      }
+      .modal-footer {
+      }
+    }
+  }
+}
+
 .modal-dialog {
   max-width: @max-modal-width;
 }
