Working email verification, sign up using coupon code, automatic signup

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -55,6 +55,14 @@ section#waiting {
         }
         padding-bottom: @vertical-grid / 2;
       }
+      #input-coupon {
+        text-align: center;
+      }
+    }
+  }
+  .waiting-coupon {
+    .banner {
+      margin-bottom: -@vertical-grid * 6.5;
     }
   }
 }
