Undebugged coupon and automatic invite processes

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -48,7 +48,7 @@ a#accordionTitleLink {
 }
 
 #email-verification-status {
-  font-size: @small-font-size;
+  font-size: @smallest-font-size;
   display: block;
   line-height: @vertical-grid-half;
 }
