--- a/backend/src/main/resources/templates/acceptInviteRequest.html
+++ b/backend/src/main/resources/templates/acceptInviteRequest.html
@@ -16,7 +16,7 @@
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
         	<p>this is the roll out of a very limited private beta batch.</p>
             <p>the initial roll out is for iphone users only. the android app is only weeks away.</p>
-            <p>don’t hesitate to contact us at <a href="mailto:info@ext.md">info@ext.md</a> for any questions or comments.</p>
+            <p>don't hesitate to contact us at <a href="mailto:info@ext.md">info@ext.md</a> for any questions or comments.</p>
             <p><br/><br/>welcome to your extended mind.</p>            
             </h2>
       </div>
