--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -523,6 +523,10 @@ a.content:active {
         overflow-y: auto;
       }
       .modal-footer {
+        padding: 15px 0 0 0;
+        button {
+          margin: 0;
+        }
       }
     }
   }
