Changed overflow scroll to auto from modals and menus.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -506,7 +506,7 @@ a.content:active {
     top: 50%;
     left: 50%;
     .modal-body {
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 }
