--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -291,7 +291,7 @@ footer {
   background-color: white;
   max-width: @one-column-grid-width;
   height: inherit;
-  overflow-y: scroll;
+  overflow-y: auto;
   .center-horizontally;
   #menu-content {
     padding-top: @page-header-height;
@@ -318,7 +318,7 @@ footer {
   position: absolute;
   width: 260px;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   #menu-content {
     div.banner {
       padding-top: 8px;
