:hover and :active effect to menu entries.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -306,7 +306,10 @@ footer {
       // FIXME: This color is strange
       color: @default-element;
     }
-    a.collective:active {
+    a:hover {
+      color: @default-element-hover;
+    }
+    a:active {
       color: @default-element-pressed;
     }
   }
@@ -336,6 +339,9 @@ footer {
     a {
       // http://getbootstrap.com/components/#dropdowns
       display: block;
+    }
+    a:active {
+      color: @default-element-pressed;
     }
   }
 }
