--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -51,8 +51,10 @@
 @mobile-menu: #363636;
 
 @default-element: #919191;
+@default-element-hover: darken(@default-element, 10%);
 @default-element-pressed: darken(@default-element, 20%);
 @highlighted-element: #0f82fe;
+@highlighted-element-hover: darken(@highlighted-element, 10%);
 @highlighted-element-pressed: darken(@highlighted-element, 20%);
 
 // Buttons
