Inbox: * add item... * removed newest first order * fix inbox page not scrollable

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -160,6 +160,7 @@ section#signup {
   section#inbox {
     margin-top: -@page-header-height;
     #inbox-page-content-container {
+      overflow-y: auto;
       padding-bottom: @footer-height;
     }
   }
