Fixed details swiper slide width when only one detail slide exists: * Set width to 100% for .swiper-container, .swiper-wrapper and .swiper-slide.

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -211,6 +211,7 @@ footer {
 
 .swiper-container, .swiper-wrapper, .swiper-slide {
   height: inherit !important;
+  width: 100%;
 }
 
 .swiper-container.main-slides {
