icon refactoring, also fixes the missing >

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -339,7 +339,7 @@ input[type='checkbox'] + label:before {
 }
 
 input[type="checkbox"] + label:before {
-  .icon-selection_empty;
+  .icon-selection-empty;
 }
 
 input[type="checkbox"] + label.overdue:before {
@@ -347,7 +347,7 @@ input[type="checkbox"] + label.overdue:before {
 }
 
 input[type="checkbox"]:checked + label:before {
-  .icon-selection_checked;
+  .icon-selection-checked;
   color: @highlighted-element;
 }
 
@@ -546,12 +546,12 @@ a.content:active {
   font-size: @slide-indicator-width;
 }
 
-.icon-logo_with_text {
+.icon-logo-with-text {
   color: @logo;
   font-size: @banner-logo-size;
 }
 
-.icon-logo_only {
+.icon-logo-only {
   color: @logo;
 }
 
