--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -324,7 +324,7 @@ footer {
     div.banner {
       padding-top: 8px;
       height: @page-header-height;
-      span.icon-logo_only {
+      span.icon-logo-only {
         vertical-align: middle;
         font-size: @drawer-menu-icon-size;
       }
