bugfix: icomoon font family needs !important

--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -10,7 +10,7 @@
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'icomoon';
+	font-family: 'icomoon' !important;
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -43,7 +43,7 @@
 .icon-logo-with-text:before {
 	content: "\e606";
 }
-.icon-logo-only:before {
+.icon-logo-only:before{
 	content: "\e607";
 }
 .icon-inbox:before {
