quick edit task: fields indented

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -189,3 +189,11 @@ section#tasks-dates {
     color: @highlighted-element;
   }
 }
+
+// quick edit task indentation
+#taskCoreFields {
+  margin-left: 39px;
+}
+#taskList,#taskContext {
+  margin-left: -7px;
+}
