Added first version admin UI with possibility to delete and accept invite requests. Stats are also collected and printed on backend startup, which should get the server up and running right away without need for initialization requests.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -123,12 +123,15 @@ Only universal code that would work by itself in any web page.
 // LINKS
 
 .highlighted-link {
-  display: block;
   color: @highlighted-element;
 }
 
 .highlighted-link:active {
   color: @highlighted-element-pressed;
+}
+
+.warning-link {
+  color: @warning;
 }
 
 // INPUTS
