--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -145,8 +145,9 @@ section#signup {
 
 // STATIC PAGES WITH MENU
 
-#account-container, #about-container, #inbox-container {
-  section#account, section#about, section#inbox {
+#account-container, #about-container, #inbox-container, #admin-container {
+  section#account, section#about, section#inbox, section#admin {
+    height: inherit;
     position: relative;
   }
   div#menu-content {
