--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -23,6 +23,16 @@ Extended Mind specific UI-components.
   }
 }
 
+// quick edit task indentation
+.accordion-inner {
+  #taskCoreFields {
+    margin-left: 39px;
+  }
+  #taskList, #taskContext {
+    margin-left: -7px;
+  }
+}
+
 input[type="checkbox"]:checked ~ a#accordionTitleLink {
   color: @default-element;
   .fade-color(@fade-time);
