--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -22,6 +22,10 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-x:before {
+	content: "\e60d";
+}
+
 .icon-tasks:before {
 	content: "\e600";
 }
