--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -24,6 +24,9 @@
 
 .icon-x:before {
 	content: "\e60d";
+	font-size: 18px;
+	vertical-align: middle;
+	line-height: 18px;
 }
 
 .icon-tasks:before {
