--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -259,8 +259,9 @@ footer {
 }
 
 #omnibarX {
-  padding-top: 0;
-  padding-bottom: 2px;
+  font-size: 18px;
+  //padding-top: 0;
+  padding-bottom: 9px;
 }
 
 // MENU
