i. Task date input: * Renamed dateTodayDirective to dateInputDirective * Listen to date input blur event to switch to placeholder text if task has no date * Show date input instead of placeholder text if task has a date * Minimalistic date input CSS * Aligned date input (and placeholder) inside accordion with task title
ii. Edit item dialog header:
* New editHeaderDirective
* Transparent button CSS
* @normal-button-hover LESS variable

iii. Fix pull to next/previous week and date slide fixes:
* Removed transitionSpeed parameter from SwiperService's swipeTo method
* swipeToStaringDay method in DatesController animates swipe in other cases than initialization
* Moved Date slides' subtask initialization from DOM to watch method for active day
* Fixed broken date slides due to ngAnimate with tracking expression in weekdays' ngRepeat

iiii. Desktop menu crossfade in task slides

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -161,6 +161,10 @@ Only universal code that would work by itself in any web page.
   }
 }
 
+.date-input-placeholder {
+  display: block;
+}
+
 // Input on the left and  button on the right OR
 // Checkbox on the left, input in the center, and button on the right
 
@@ -303,6 +307,19 @@ button.enabled-button {
   }
 }
 
+button.transparent-button {
+  color: @normal-button;
+  &:hover {
+    color: @normal-button-hover;
+  }
+  &:active {
+    color: @normal-button-pressed;
+  }
+  &[disabled] {
+    color: @normal-button-disabled;
+  }
+}
+
 // CHECKBOXES
 
 // Make labels clickable
@@ -334,6 +351,16 @@ input[type="checkbox"] + label.overdue:before {
 input[type="checkbox"]:checked + label:before {
   .icon-selection-checked;
   color: @highlighted-element;
+}
+
+input[type=date] {
+  background: none;
+  border: none;
+  color: @default-element;
+  outline: none;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 // SELECTIONS
@@ -649,4 +676,34 @@ a.content:active {
 @-webkit-keyframes fade-out {
   from { opacity: 1; }
   to { opacity: 0; }
+}
+
+// DESKTOP MENU
+
+.desktop-menu-animation.ng-enter {
+  -webkit-animation: .1s fade-in;
+  -moz-animation: .1s fade-in;
+  -o-animation: .1s fade-in;
+  animation: .1s fade-in;
+}
+
+.desktop-menu-animation.ng-leave {
+  -webkit-animation: .1s fade-out;
+  -moz-animation: .1s fade-out;
+  -o-animation: .1s fade-out;
+  animation: .1s fade-out;
+}
+
+.desktop-menu-animation.ng-hide-add {
+  -webkit-animation: .1s fade-out;
+  -moz-animation: .1s fade-out;
+  -o-animation: .1s fade-out;
+  animation: .1s fade-out;
+}
+
+.desktop-menu-animation.ng-hide-remove {
+  -webkit-animation: .1s fade-in;
+  -moz-animation: .1s fade-in;
+  -o-animation: .1s fade-in;
+  animation: .1s fade-in;
 }
