--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -28,7 +28,7 @@ Extended Mind specific UI-components.
   #taskCoreFields {
     margin-left: 39px;
   }
-  #taskList, #taskContext {
+  #taskList, #taskContext, #taskDue, .date-input-placeholder {
     margin-left: -7px;
   }
 }
