--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -60,6 +60,7 @@
 // Buttons
 
 @normal-button: #0f82fe;
+@normal-button-hover: darken(@normal-button, 10%);
 @normal-button-pressed: darken(@normal-button, 20%);
 @normal-button-disabled: lighten(#b0b0b6, 20%);
 
