note and task title turns to bold when editing

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -14,6 +14,9 @@ Extended Mind specific UI-components.
   .accordion-title-open {
     margin-top: -5px;
     padding-bottom: 5px;
+    input {
+      .font-bold;
+    }
     .left-input-wrapper {
       padding-left: 1px;
     }
