--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -262,6 +262,11 @@ footer {
       max-height: @maximum-landscape-height;
       margin-top: -@maximum-landscape-height / 2;
       top: 50%;
+      #edit-page {
+        section.page {
+          top: 120px;
+        }
+      }
       section.page {
         .absolute-center;
       }
