--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -77,6 +77,19 @@ section#launch {
   }
 }
 
+#edit-page {
+  height: 100%;
+  overflow-y: hidden;
+  section#edit-task, section#edit-note, section#edit-item, section#edit-context, section#edit-list {
+    height: 100%;
+    overflow-y: auto;
+    .content-container {
+      height: 100%;
+      overflow-y: auto;
+    }
+  }
+}
+
 section#welcome {
   max-width: 350px;
   .column {
