Updated welcome page with link to app stores

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -110,6 +110,12 @@ section#welcome {
       #welcome-instructions {
         padding-bottom: @vertical-grid;
       }
+      #welcome-store-buttons{
+        padding-bottom: @vertical-grid;
+      }
+      #welcome-continue-link{
+        font-size: @small-font-size;
+      }
     }
   }
 }
