Fixed email layout for iPhones

--- a/backend/src/main/resources/templates/acceptInviteRequest.html
+++ b/backend/src/main/resources/templates/acceptInviteRequest.html
@@ -10,7 +10,7 @@
     </div>
     <div id="em-content">
       <div id="em-heading" style="padding-top: 30px;max-width: 320px;margin-left: auto;margin-right: auto;">
-        <h1 style="font-size: 26px;font-weight: 200;color: black;">welcome to your extended mind</h1>
+        <h1 style="font-size: 26px;font-weight: 200;color: black;">welcome to your<br/>extended mind</h1>
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 355px;margin-left: auto;margin-right: auto;line-height: 28px;">
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
@@ -21,7 +21,7 @@
             </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="acceptInviteLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;">click here to start using the service</span></a>
+        <a href="acceptInviteLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size:15px;">click here to start using the service</span></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
