--- a/backend/src/main/resources/templates/verifyEmail.html
+++ b/backend/src/main/resources/templates/verifyEmail.html
@@ -10,13 +10,16 @@
     </div>
     <div id="em-content">
       <div id="em-heading" style="padding-top: 30px;max-width: 320px;margin-left: auto;margin-right: auto;">
-        <h1 style="font-size: 26px;font-weight: 200;color: black;">find below a link to verify your email address to the extended mind service</h1>
+        <h1 style="font-size: 26px;font-weight: 200;color: black;">please verify your email</h1>
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
-        <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">if you have not registered as a user to extended mind, please let us know by replying to this email</h2>
+        <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
+          <p>find below a link to verify your email address to the extended mind service.</p>
+          <p>if you have not registered as a user to extended mind, please let us know by replying to this email.</p>
+        </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="verifyEmailLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;">click here to verify your email</span></a>
+        <a href="verifyEmailLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size: 15px;">click here to verify your email</span></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
