--- a/frontend/ios/EMPrototype/EMPrototype/Base.lproj/Main_iPhone.storyboard
+++ b/frontend/ios/EMPrototype/EMPrototype/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="41u-Fd-GHz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="41u-Fd-GHz">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Inbox View Controller - Inbox-->
@@ -334,7 +334,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nrq-IJ-dcO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="690" y="1647"/>
+            <point key="canvasLocation" x="694" y="2457"/>
         </scene>
         <!--Navigation Controller - Tasks-->
         <scene sceneID="OiJ-IE-img">
@@ -350,7 +350,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7V-mr-raD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="166" y="1647"/>
+            <point key="canvasLocation" x="166" y="2457"/>
         </scene>
         <!--Table View Controller - Notes-->
         <scene sceneID="9Ck-GL-UeW">
@@ -409,7 +409,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w8g-7o-UEa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="681" y="1615"/>
+            <point key="canvasLocation" x="694" y="1688"/>
         </scene>
         <!--View Controller - Add note-->
         <scene sceneID="62g-eJ-fr7">
@@ -446,7 +446,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ey4-6M-bD5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1122" y="1607"/>
+            <point key="canvasLocation" x="1131" y="1695"/>
         </scene>
         <!--Navigation Controller - Notes-->
         <scene sceneID="Oj8-mw-i02">
@@ -462,7 +462,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sgc-BK-dIf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="157" y="1615"/>
+            <point key="canvasLocation" x="166" y="1703"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Hr6-ee-CEV">
