Change active feature:  * Active feature variable is stored in mainViewDirective and state in featureContainerDirective  * Replaced '/[ownerPrefix]/[feature]' routes, e.g. '/my/tasks' with '/[ownerPrefix]'  * Unified html element attributes order  * Removed unique drawer menus and headers from content and system feature pages  * Keep drawer menu hidden until feature container is ready  * Register and set appropriate snap drawer drag element for active feature  * Identify omnibar placeholder with feature + heading
 * SwiperService:
    * refreshSwiperAndChildSwipers method
    * check swiper existense in setSwiping method

 * refactoring

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -267,6 +267,11 @@ footer {
           top: 120px;
         }
       }
+      #inbox-container {
+        section#inbox {
+          top: -60px;
+        }
+      }
       section.page {
         .absolute-center;
       }
