--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -165,6 +165,7 @@ section#signup {
 // STATIC PAGES WITH MENU
 
 #account-container, #about-container, #inbox-container, #admin-container {
+  height: 100%;
   section#account, section#about, section#inbox, section#admin {
     height: inherit;
     position: relative;
@@ -178,7 +179,6 @@ section#signup {
 
 #inbox-container {
   section#inbox {
-    margin-top: -@page-header-height;
     #inbox-page-content-container {
       overflow-y: auto;
       padding-bottom: @footer-height;
