increased padding below em logo (affects especially Safari!)

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -8,6 +8,10 @@ Only universal code that would work by itself in any web page.
   position: relative;
 }
 
+.padding-bottom {
+  padding-bottom: 25px;
+}
+
 // http://coding.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
 .absolute-center {
   width: 50%;
