--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -41,6 +41,9 @@ section#login, section#signup, section#launch, section#waiting, section#forgot, 
       }
     }
   }
+  .icon-logo-with-text {
+    padding-bottom: 25px;
+  }
 }
 
 section#waiting {
