Undebugged loading animation

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -506,3 +506,12 @@ li.datepicker-date {
     }
   }
 }
+
+.loading-animation {
+  position: relative;
+  height: inherit;
+  padding-top: @vertical-grid * 3;
+  font-size: @smallest-font-size;
+  color: @default-element;
+  text-align: center;
+}
