--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -36,6 +36,10 @@ html {
     height: inherit;
     overflow: hidden;
   }
+  div[role=main] {
+    // Default to white background
+    background-color: white;
+  }
   font-size: @default-font-size;
 }
 
@@ -83,6 +87,7 @@ ul {
 
 input, select, textarea {
   width: 100%;
+  background-color: inherit;
 }
 
 button {
