Reintroduced background color to buttons to fix layout

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -94,6 +94,7 @@ header {
   .center-horizontally;
   position: relative;
   #active-action-wrapper {
+    background-color: white;
     height: @page-header-height;
     float: left;
     text-align: right;
@@ -114,6 +115,7 @@ header {
     // Width determined with javascript
   }
   #plus-button-wrapper {
+    background-color: white;
     height: @page-header-height;
     float: right;
     text-align: left;
